--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
-api
-api~
-api.exe
-api.exe~
-lastupdate.tmp 
+financiera_mongo_crud
+financiera_mongo_crud~
+financiera_mongo_crud.exe
+financiera_mongo_crud.exe~
+lastupdate.tmp
