--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,10 +1,10 @@
-appname = api
-httpport = 8080
+appname = financiera_mongo_crud
+httpport = ${FINANCIERA_MONGO_CRUD_PORT}
 runmode = dev
 autorender = false
 copyrequestbody = true
 EnableDocs = true
-mongo_host = mongodb
-mongo_db = admin
-mongo_user = admin
-mongo_pass = admin
+mongo_host = ${FINANCIERA_MONGO_CRUD_DB_URL}
+mongo_db = ${FINANCIERA_MONGO_CRUD_DB_NAME}
+mongo_user = ${FINANCIERA_MONGO_CRUD_DB_USER}
+mongo_pass = ${FINANCIERA_MONGO_CRUD_DB_PASS}
