Agregada transacción para registro de rubros:
* Manteniendo modelo de hijos y padre.
* Devolviendo una estructura como respuesta de la transacción

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -8,3 +8,4 @@ mongo_host = ${FINANCIERA_MONGO_CRUD_DB_URL}
 mongo_db = ${FINANCIERA_MONGO_CRUD_DB_NAME}
 mongo_user = ${FINANCIERA_MONGO_CRUD_DB_USER}
 mongo_pass = ${FINANCIERA_MONGO_CRUD_DB_PASS}
+mongo_db_auth = ${FINANCIERA_MONGO_CRUD_DB_AUTH}
