--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=8082
 DB_PORT=27017
 API_NAME=financiera_mongo_crud
-SERVICE_NAME=prescrud
+SERVICE_NAME=finmongocrud
 API_BASE_DIR=github.com/udistrital
 MONGO_HOST=financiera_mongo_db
 MONGO_USER=test
