--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,10 @@ services:
       - .:/go/src/${API_BASE_DIR}/${API_NAME}
     ports: 
       - "${PORT}:${PORT}"
+    env_file: 
+      - custom.env
     environment:
-      - PRESUPUESTO_API_HTTP_PORT=${PORT}
-      - API_NAME=${API_NAME}
-      - FINANCIERA_MONGO_CRUD_DB_URL=${MONGO_HOST}
-      - FINANCIERA_MONGO_CRUD_DB_NAME=${MONGO_DB}
-      - FINANCIERA_MONGO_CRUD_DB_USER=${MONGO_USER}
-      - FINANCIERA_MONGO_CRUD_DB_PASS=${MONGO_PASSWORD}
-      - FINANCIERA_MONGO_CRUD_DB_AUTH=${MONGO_DB_AUTH}
+      - FINANCIERA_MONGO_CRUD_PORT=${PORT}
       - RUN_MODE=dev 
       - SERVICE_TAGS=traefik.enable=true,traefik.frontend.entryPoints=http,traefik.frontend.rule=Host:${SERVICE_NAME}.localhost   
     command: sh -c 'cd ${API_BASE_DIR}/${API_NAME};go get -v ./...; bee run'
@@ -27,12 +23,12 @@ services:
       - back_end
   db:
     image: mongo:latest
-    container_name: ${MONGO_HOST}
+    container_name: ${FINANCIERA_MONGO_CRUD_DB_URL}
     environment: 
       - MONGO_DATA_DIR=/data/db
       - MONGO_LOG_DIR=/dev/null
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
+      - MONGO_INITDB_ROOT_USERNAME=${FINANCIERA_MONGO_CRUD_DB_USER}
+      - MONGO_INITDB_ROOT_PASSWORD=${FINANCIERA_MONGO_CRUD_DB_PASS}
     volumes:
       - financiera_mongo_data:/data/db
     ports:
@@ -43,9 +39,9 @@ services:
     image: mongo-express
     restart: on-failure
     environment:
-      - ME_CONFIG_MONGODB_SERVER=${MONGO_HOST}
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=${MONGO_USER}
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGO_PASSWORD}
+      - ME_CONFIG_MONGODB_SERVER=${FINANCIERA_MONGO_CRUD_DB_URL}
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=${FINANCIERA_MONGO_CRUD_DB_USER}
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=${FINANCIERA_MONGO_CRUD_DB_PASS}
       - ME_CONFIG_MONGODB_ENABLE_ADMIN=true
     ports:
       - 8090:8081
